--- a/src/AppPartes.Web/Views/Home/Index.cshtml
+++ b/src/AppPartes.Web/Views/Home/Index.cshtml
@@ -118,7 +118,7 @@
         </section>
         <footer class="border-top footer text-muted">
             <div class="container">
-                &copy; @DateTime.Now.Year -Grupo Aldakin AppPartes.Web - @Model.strVersion
+                &copy; @DateTime.Now.Year -Grupo Aldakin AppPartes.Web 4.0.5 - @Model.strVersion
                 @*&copy; 2020 - AppPartes.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
             </div>
         </footer>
