creada y probada seccion de validaciones

--- a/src/AppPartes.Web/Views/Message/Index.cshtml
+++ b/src/AppPartes.Web/Views/Message/Index.cshtml
@@ -37,7 +37,9 @@
                             <h4>Remitente @Model.oMessage.strDe</h4>
                             <h4>Fecha: @Model.oMessage.Fecha</h4>
                             <h4>Texto:</h4>
-                            <blockquote>@Model.oMessage.Mensaje</blockquote>
+                            <blockquote>
+                                <textarea name="xx" value="" rows="6" disabled>@Model.oMessage.Mensaje</textarea>
+                            </blockquote>
 
                         </div>
                         <div class="col-12">
