--- a/src/AppPartes.Web/Views/Search/Index.cshtml
+++ b/src/AppPartes.Web/Views/Search/Index.cshtml
@@ -26,7 +26,7 @@
 
     <!-- Content -->
     <section>
-        <h2 id="elements">Estado Partes del mes</h2>
+        <h2 id="elements">Resumen mensual Partes</h2>
         <p>Seleccione una delegación y una fecha para ver el estado de los partes de trabajo de cada día de cada trabajador del mes seleccionado.</p>
         <p>Cuantos más trabajadores se pueden validar más largo es el tiempo de obtención de datos.</p>
         <form asp-controller="Search" asp-action="Index" method="POST">
@@ -72,7 +72,7 @@
         <hr class="major" />
     </section>
     <section>
-        <h2 id="elements">Estado Partes del trabajador</h2>
+        <h2 id="elements">Validación de Partes</h2>
         <p>Seleccione un día de semana,delegación y trabajador para ver los partes de la semana del trabajador en la seleccionada.</p>
         <form asp-controller="Search" asp-action="Index" method="POST">
             <div class="row gtr-uniform">
