trabajando en seccion de validaciones

--- a/src/AppPartes.Web/Views/Home/Index.cshtml
+++ b/src/AppPartes.Web/Views/Home/Index.cshtml
@@ -81,6 +81,7 @@
                                         @if (Model.user.iLevel >= 4)
                                         {
                                             <th><a class="nav-link text-dark" asp-area="" asp-controller="Search" asp-action="Index">Busquedas</a> </th>
+                                            <th><a class="nav-link text-dark" asp-area="" asp-controller="Permisos" asp-action="Index">Permisos</a></th>
                                         }
                                         @if (Model.user.iLevel >= 5)
                                         {
