--- a/src/AppPartes.Web/Views/Search/Index.cshtml
+++ b/src/AppPartes.Web/Views/Search/Index.cshtml
@@ -323,6 +323,7 @@
                         <td style="background-color:#FFFFFF">Día sin cerrar</td>
                         <td style="background-color:#D3D3D3">Fin de semana</td>
                         <td style="background-color:#FFFF00">Día Cerrado</td>
+                        <td style="background-color:#F0FFF0">Día MediaJornada</td>
                     </tr>
                 </tbody>
             </table>
